feat: history UPDATE
