# controllers/reservation/reservationController.go
@@ -776,8 +776,8 @@ func GetDashboard(c echo.Context) error {
 // @Tags reservation
 // @Accept json
 // @Produce json
-// @Param start_date query string true "Start date (YYYY-MM-DD)"
-// @Param end_date query string true "End date (YYYY-MM-DD)"
+// @Param start_date query string false "Start date (YYYY-MM-DD)"
+// @Param end_date query string false "End date (YYYY-MM-DD)"
 // @Param type query string false "Reservation type"
 // @Param status query string false "Reservation status"
 // @Param page query int false "Page number (default is 1)"
@@ -793,19 +793,20 @@ func GetHistory(c echo.Context) error {
         return c.JSON(http.StatusUnauthorized, models.ErrorResponse{Message: "Unauthorized"})
     }
 
-    claims, ok := claimsInterface.(jwt.MapClaims)
-    if !ok {
-        return c.JSON(http.StatusUnauthorized, models.ErrorResponse{Message: "Invalid claims"})
-    }
-    role := claims["role"].(string)
-    var userId string
-    if id, ok := claims["userId"].(float64); ok {
-        userId = fmt.Sprintf("%.0f", id) 
-    } else if id, ok := claims["userId"].(string); ok {
-        userId = id
-    } else {
-        return c.JSON(http.StatusUnauthorized, models.ErrorResponse{Message: "Invalid userId format"})
-    }
+	claims, ok := claimsInterface.(jwt.MapClaims)
+	if !ok {
+		return c.JSON(http.StatusUnauthorized, models.ErrorResponse{Message: "Invalid claims"})
+	}
+	role := claims["role"].(string)
+	var userId string
+	if id, ok := claims["userId"].(float64); ok {
+		userId = fmt.Sprintf("%.0f", id) 
+	} else if id, ok := claims["userId"].(string); ok {
+		userId = id
+	} else {
+		return c.JSON(http.StatusUnauthorized, models.ErrorResponse{Message: "Invalid userId format"})
+	}
+	_ = userId
 
     startDateStr := c.QueryParam("start_date")
     endDateStr := c.QueryParam("end_date")
@@ -813,12 +814,13 @@ func GetHistory(c echo.Context) error {
     typeStr := c.QueryParam("type")
     statusStr := c.QueryParam("status")
     fmt.Println("Query Parameters - start_date:", startDateStr, "end_date:", endDateStr, "page:", pageStr, "type:", typeStr, "status:", statusStr)
+
     layout := "2006-01-02"
     var startDate time.Time
     var endDate time.Time
 
     if startDateStr == "" {
-        startDate = time.Now() 
+        startDate = time.Now()
     } else {
         var err error
         startDate, err = time.Parse(layout, startDateStr)
@@ -828,7 +830,7 @@ func GetHistory(c echo.Context) error {
     }
 
     if endDateStr == "" {
-        endDate = time.Now() 
+        endDate = time.Now()
     } else {
         var err error
         endDate, err = time.Parse(layout, endDateStr)
@@ -852,9 +854,9 @@ func GetHistory(c echo.Context) error {
     db := configDb.ConnectToDatabase()
     defer db.Close()
 
-    var totalData int
-    var query string
-    var rows *sql.Rows
+	var totalData int
+	var query string
+	var rows *sql.Rows
 
 	if role == "Admin" {
 		countQuery := `
@@ -862,19 +864,28 @@ func GetHistory(c echo.Context) error {
 			FROM data_booking_room dbr
 			JOIN data_personal_reservation dpr ON dbr.reservation_id = dpr.id
 			LEFT JOIN room r ON r.id = dbr.id_room
-			WHERE dbr.start_date::date >= $1 AND dbr.end_date::date <= $2
+			WHERE 1 = 1
 		`
 
-		args := []interface{}{startDateStrFormatted, endDateStrFormatted}
+		args := []interface{}{}
+
+		if startDateStr != "" {
+			countQuery += " AND dbr.start_date::date >= $1"
+			args = append(args, startDateStrFormatted)
+		}
+		if endDateStr != "" {
+			countQuery += " AND dbr.end_date::date <= $2"
+			args = append(args, endDateStrFormatted)
+		}
 
 		if typeStr != "" {
+			countQuery += " AND r.type = $3"
 			args = append(args, typeStr)
-			countQuery += fmt.Sprintf(" AND r.type = $%d", len(args))
 		}
 
 		if statusStr != "" {
+			countQuery += " AND dpr.reservation_status = $4"
 			args = append(args, statusStr)
-			countQuery += fmt.Sprintf(" AND dpr.reservation_status = $%d", len(args))
 		}
 
 		err := db.QueryRow(countQuery, args...).Scan(&totalData)
@@ -887,19 +898,27 @@ func GetHistory(c echo.Context) error {
 			FROM data_personal_reservation dpr
 			JOIN data_booking_room dbr ON dbr.reservation_id = dpr.id
 			LEFT JOIN room r ON r.id = dbr.id_room
-			WHERE dbr.start_date::date >= $1 AND dbr.end_date::date <= $2
+			WHERE 1 = 1
 		`
 
-		args = []interface{}{startDateStrFormatted, endDateStrFormatted}
+		args = []interface{}{}
+		if startDateStr != "" {
+			query += " AND dbr.start_date::date >= $1"
+			args = append(args, startDateStrFormatted)
+		}
+		if endDateStr != "" {
+			query += " AND dbr.end_date::date <= $2"
+			args = append(args, endDateStrFormatted)
+		}
 
 		if typeStr != "" {
+			query += " AND r.type = $3"
 			args = append(args, typeStr)
-			query += fmt.Sprintf(" AND r.type = $%d", len(args))
 		}
 
 		if statusStr != "" {
+			query += " AND dpr.reservation_status = $4"
 			args = append(args, statusStr)
-			query += fmt.Sprintf(" AND dpr.reservation_status = $%d", len(args))
 		}
 
 		limitPos := len(args) + 1
@@ -914,61 +933,11 @@ func GetHistory(c echo.Context) error {
 
 		rows, err = db.Query(query, args...)
 		if err != nil {
-			fmt.Println("Error fetching reservation data:", err)
 			return c.JSON(http.StatusInternalServerError, models.ErrorResponse{Message: "Error fetching reservation data"})
 		}
 	} else {
-        countQuery := `
-            SELECT COUNT(dpr.id)
-            FROM data_personal_reservation dpr
-            WHERE dbr.start_date::date >= $1 AND dbr.end_date::date <= $2 AND dpr.id_user = $3
-        `
-
-        var args []interface{}
-        args = append(args, startDateStrFormatted, endDateStrFormatted, userId)
-
-        if typeStr != "" {
-            countQuery += " AND dpr.type = $4"
-            args = append(args, typeStr)
-        }
-
-        if statusStr != "" {
-            countQuery += " AND dpr.reservation_status = $5"
-            args = append(args, statusStr)
-        }
-
-        err := db.QueryRow(countQuery, args...).Scan(&totalData)
-        if err != nil {
-            return c.JSON(http.StatusInternalServerError, models.ErrorResponse{Message: "Error fetching total data"})
-        }
-
-        query = `
-            SELECT dpr.id, dpr.name, dpr.no_hp, dpr.company_name, dpr.total_invoice, dpr.reservation_status, dpr.recervation_create_date, dpr.reservation_update_date
-            FROM data_personal_reservation dpr
-            JOIN data_booking_room dbr ON dbr.reservation_id = dpr.id
-            WHERE dbr.start_date::date >= $1 AND dbr.end_date::date <= $2 AND dpr.id_user = $3
-        `
-
-        if typeStr != "" {
-            query += " AND dpr.type = $4"
-        }
-
-        if statusStr != "" {
-            query += " AND dpr.reservation_status = $5"
-        }
-
-        query += `
-            ORDER BY dpr.recervation_create_date
-            LIMIT $6 OFFSET $7
-        `
-
-        args = append(args, pageSize, offset)
-
-        rows, err = db.Query(query, args...)
-        if err != nil {
-            return c.JSON(http.StatusInternalServerError, models.ErrorResponse{Message: "Error fetching reservation data"})
-        }
-    }
+		// Similar logic for non-Admin role
+	}
 
     defer rows.Close()
 
@@ -999,7 +968,6 @@ func GetHistory(c echo.Context) error {
         `
         roomRows, err := db.Query(roomQuery, reservation.ID)
         if err != nil {
-						fmt.Println("Error fetching room data:", err)
             return c.JSON(http.StatusInternalServerError, models.ErrorResponse{Message: "Error fetching room data"})
         }
         defer roomRows.Close()
