# docs/swagger.yaml
@@ -84,13 +84,13 @@ definitions:
         type: string
       phoneNumber:
         type: string
-      reservationStatus:
-        type: string
       rooms:
         items:
           $ref: '#/definitions/models.RoomDetail'
         type: array
-      totalInvoice:
+      status:
+        type: string
+      total:
         type: number
       updatedAt:
         type: string
@@ -684,12 +684,10 @@ paths:
       - description: Start date (YYYY-MM-DD)
         in: query
         name: start_date
-        required: true
         type: string
       - description: End date (YYYY-MM-DD)
         in: query
         name: end_date
-        required: true
         type: string
       - description: Reservation type
         in: query
